# powerwall-controller

./: .editorconfig  .gitignore  DOCKER.md  Dockerfile  README.md  config.example.yaml  config.yaml.example  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  start.sh
app/: __init__.py  api.py  config.py  main.py
app/services/: automation_service.py  monitoring_service.py  powerwall_service.py  storage_service.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: audit.html  automation.html  base.html  configuration.html  dashboard.html  history.html
tests/: conftest.py  test_api.py  test_automation_service.py  test_config.py  test_storage_service.py
